TestSuite/PascalABCTests/errors/err0003.pas
var a : integer;
begin
a := 'ass';
end.